--- a/stylesheet.css
+++ b/stylesheet.css
@@ -953,6 +953,7 @@ main {
             /* --- Styles for Education/Certifications --- */
             .education {
                 padding: 2rem 0;
+
                 .timeline-container {
                     position: relative;
                     padding-left: 36px;
@@ -1142,4 +1143,59 @@ main::after {
 .fade-in-left.visible {
     opacity: 1;
     transform: translateX(0);
+}
+
+/*modal*/
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    backdrop-filter: blur(4px);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+
+    & .modal-content {
+        background-color: var(--dark-color);
+        color: var(--text-light);
+        padding: 2rem;
+        border-radius: 1rem;
+        width: 90%;
+        max-width: 600px;
+        position: relative;
+        text-align: center;
+
+       & img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 0.5rem;
+            margin-bottom: 1rem;
+        }
+
+        & .close-modal {
+            position: absolute;
+            top: 1rem;
+            right: 1rem;
+            background: transparent;
+            color: white;
+            font-size: 2rem;
+            border: none;
+            cursor: pointer;
+        }
+
+        & .modal-link-button {
+            display: inline-block;
+            margin-top: 1rem;
+            background-color: var(--Main-color);
+            color: black;
+            padding: 0.75rem 1.5rem;
+            border-radius: 2rem;
+            text-decoration: none;
+            font-weight: bold;
+        }
+    }
 }
