cambios de fondo
se agregaron gradientes de fondos para el portfolio

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -331,7 +331,7 @@ header {
 /*section main*/
 main {
     position: relative;
-    background: url(./img/Image-primary.jpg) no-repeat center center/cover;
+    background: url(./img/gradient.png) no-repeat center center/cover;
     background-attachment: fixed;
 
     .section {
