accionar el modal (popup)
+Se modifico el script para que ahora sean independientes un modal del otro manteniendo la estructura.
+Se creo la información del modal en modal-data
+Se comento una linea vacía de la hoja de esitlos

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1337,7 +1337,7 @@ main::after {
 }
 
 @media (min-width:768px) {
-    .project-modal {}
+    /* .project-modal {} */
 }
 
 @media (min-width:900px) {
