--- a/stylesheet.css
+++ b/stylesheet.css
@@ -559,12 +559,15 @@ main {
                     transition: background-color 0.3s;
                     font-size: 2rem;
                     margin: 0;
+                    color: rgba(184, 135, 11, 0.623);
+                    transform: scale(0.8);
                 }
 
                 .tab-button.active {
                     background-color: transparent;
                     color: var(--Main-color);
-
+                    transform: scale(1);
+                    transition: transform 0.3s ease;
                 }
             }
 
@@ -866,12 +869,15 @@ main {
                         font-weight: bold;
                         font-size: 1.25rem;
                         cursor: pointer;
-                        color: var(--Main-color);
                         transition: all 0.3s;
+                        color: rgba(184, 135, 11, 0.623);
                     }
 
                     .skills-tab-button.active {
-                        border-bottom: 1px solid var(--Main-color);
+                        font-size: 1.5rem;
+                        color: var(--Main-color);
+                        border-left: 2px solid var(--Main-color);
+                        padding-left: 4px;
                     }
                 }
 
