--- a/stylesheet.css
+++ b/stylesheet.css
@@ -869,15 +869,16 @@ main {
                         font-weight: bold;
                         font-size: 1.25rem;
                         cursor: pointer;
-                        transition: all 0.3s;
                         color: rgba(184, 135, 11, 0.623);
+
+                        transition: color 0.3s ease, border-color 0.3s ease, transform 0.3s ease;
                     }
 
                     .skills-tab-button.active {
-                        font-size: 1.5rem;
                         color: var(--Main-color);
                         border-left: 2px solid var(--Main-color);
                         padding-left: 4px;
+                        transform: scale(1.1);
                     }
                 }
 
