--- a/stylesheet.css
+++ b/stylesheet.css
@@ -870,14 +870,14 @@ main {
                         font-size: 1.25rem;
                         cursor: pointer;
                         color: rgba(184, 135, 11, 0.623);
-
+                        border-left: 2px solid transparent;
+                        padding-left: 4px;
                         transition: color 0.3s ease, border-color 0.3s ease, transform 0.3s ease;
                     }
 
                     .skills-tab-button.active {
                         color: var(--Main-color);
-                        border-left: 2px solid var(--Main-color);
-                        padding-left: 4px;
+                        border-left-color: var(--Main-color);
                         transform: scale(1.1);
                     }
                 }
